--- a/note/templates/note/note_detail.html
+++ b/note/templates/note/note_detail.html
@@ -1,5 +1,8 @@
-<html>
-<h1>
+{%extends "base.html"%} 
+
+{%block content %}
+<div class="border round">
+<h1 class="my-5">
     {{note.title}}
 </h1>
 <p>
@@ -7,5 +10,5 @@
  
  
 </p>
-
-</html>
+</div>
+{%endblock%}
