--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,9 +1,12 @@
-<html>
+{%extends "base.html"%} 
+
+{%block content %}
 <head><title>Smart Notes</title></head>
 <body>
     <h1>
          Welcome to smart notes!
     </h1>
+    <a href="{%url 'notes.list'%}" class="btn btn-primary">Check out these Notes</a>
     </body>
 
-</html>
+{%endblock%}
