--- a/note/templates/note/note_delete.html
+++ b/note/templates/note/note_delete.html
@@ -3,8 +3,10 @@
 {%block content %}
 
 <form method="post">{%csrf_token%}
+    <p> Are you sure you want to delete "{{note.title}}" ?</p>
+    <p> This action cannot be undone ...</p>
     {{form}}
-    <button type="submit" class="btn btn-primary my-5">Submit</button>
+    <input type="submit" class="btn btn-danger my-5" value="Confirm"/>
 </form>
 <a href="{% url 'notes.list' %}" class="btn btn-secondary">Cancel</a>
 {%endblock%}
